[package]
name = "rs64-rt"
version = "0.1.0"
authors = ["monocasa <tristan.hastings.miller@gmail.com>"]
edition = "2018"
description = "Fairly raw N64 MMIO definitions"
license = "MIT"
repository = "https://github.com/monocasa/rs64-rt"
homepage = "https://github.com/monocasa/rs64-rt"

[dependencies]
rs64-periph = "0.1.0"
